# data2ml-ops

./: .copilot-commit-message-instructions.md  .gitignore  README.md  cloudbuild.yaml  mkdocs.yml  model_training_code.py  test_training.py
dbt/: dbt_project.yml  package-lock.yml  packages.yml  requirements.txt
docs/: README.md  courese-notes.md  dataset.md  dbt-features.md  dbt-implementation.md  dbt-introduction.md  design-doc.md  feast-architecture.md  feast-introduction.md  feast-server-deployment.md  feature-store-introduction.md  index.md  knative-introduction.md  kserve-installation.md  kserve-model-deployment.md  minikube-introduction.md  mlflow-experiment-with-optuna.md  mlserver-introduction.md  prerequisites.md  sqlmesh-implementation.md  sqlmesh-introduction.md  vertex-ai-feature-store-introduction.md
feast/: cloudbuild.yaml  credit_files.csv  entrypoint.sh  feature_store.yaml  main.tf  request.json  requirements.txt
feast-2/: Dockerfile  account_features.py  feature_store.yaml  fraud_features.py  request-get-online-features.json  request-materialize-incremental.json  request-materialize.json  requirements.txt  test-commands.txt
kserve/: inference-service-grpc.yaml  inference-service-http.yaml  inference-service-rest-v2.yaml  inference-service-rest.yaml  inference-service-with-transformer-grpc.yaml  inference-service-with-transformer-rest.yaml  input-example-grpc-v2.json  input-example-grpc.json  (+9 more)
kserve/docker/: .dockerignore  Dockerfile  README.md  pyproject.toml
kserve/docker/feast_transformer/: __init__.py  __main__.py  feast_transformer.py
(+84 files in other folders)
