[project]
name = "feast-transformer"
version = "0.1.0"
description = "Feast Transformer for KServe"
requires-python = "~=3.11"
authors = [
    { email = "kuanchoulai10@gmail.com" }
]
readme = "README.md"

dependencies = [
    "kserve==0.15.1",
    "requests>=2.22.0",
    "numpy>=1.16.3"
]


[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"